# jimeng-cli

./: .gitignore  README.md  main.py  pyproject.toml
openspec/changes/archive/2026-04-18-jimeng-cli-automation/: .openspec.yaml  design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-18-jimeng-cli-automation/specs/cli-entrypoint/: spec.md
openspec/changes/archive/2026-04-18-jimeng-cli-automation/specs/image-generation/: spec.md
openspec/changes/archive/2026-04-18-jimeng-cli-automation/specs/logout/: spec.md
openspec/changes/archive/2026-04-18-jimeng-cli-automation/specs/qrcode-login/: spec.md
openspec/changes/archive/2026-04-18-jimeng-cli-automation/specs/session-persistence/: spec.md
openspec/specs/cli-entrypoint/: spec.md
openspec/specs/image-generation/: spec.md
openspec/specs/logout/: spec.md
openspec/specs/qrcode-login/: spec.md
openspec/specs/session-persistence/: spec.md
src/jimeng_cli/: browser.py  main.py  selectors.py
src/jimeng_cli/commands/: generate.py  login.py  logout.py
