[project]
name = "jimeng-cli"
version = "0.1.0"
description = "即夢 AI 圖片生成 CLI 工具，支援 headless 瀏覽器自動化登入與生圖"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "hatchling>=1.29.0",
    "loguru>=0.7.3",
    "pillow>=12.2.0",
    "playwright>=1.58.0",
    "typer>=0.24.1",
]

[project.scripts]
# NOTE: 將 `jimeng` 指令對應到 CLI 主程式入口
jimeng = "jimeng_cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# NOTE: 使用 src layout，避免套件與專案根目錄混淆
packages = ["src/jimeng_cli"]
